--- a/mybatis-generator/pom.xml
+++ b/mybatis-generator/pom.xml
@@ -51,6 +51,7 @@
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.6</version>
                 <configuration>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
