--- a/mybatis-generator/pom.xml
+++ b/mybatis-generator/pom.xml
@@ -32,6 +32,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.27</version>
+
             <scope>runtime</scope>
         </dependency>
         <dependency>
