--- a/common/src/main/resources/db.properties
+++ b/common/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/mybatis
+jdbc.url=jdbc:mysql://127.0.0.1:3306/mybatis_test
 jdbc.user=root
 jdbc.password=root
