--- a/use-mybatis/src/main/resources/application-dev.yml
+++ b/use-mybatis/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 #开发配置
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/mybatis_test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
