--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.bkunzhang.mybatis</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>mybatis-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
