--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bkunzhang.mybatis</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>mybatis-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <modules>
+        <module>jdbc</module>
+        <module>common</module>
+        <module>mybatis-generator</module>
+        <module>use-mybatis</module>
+        <module>mybatis-only</module>
+    </modules>
 
     <dependencyManagement>
         <dependencies>
@@ -44,18 +52,8 @@
                 <artifactId>druid</artifactId>
                 <version>1.1.10</version>
             </dependency>
-
-
         </dependencies>
     </dependencyManagement>
-
-    <modules>
-        <module>jdbc</module>
-        <module>common</module>
-        <module>mybatis-generator</module>
-        <module>use-mybatis</module>
-        <module>mybatis-only</module>
-    </modules>
 
     <build>
         <plugins>
