--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>mybatis-generator</module>
         <module>use-mybatis</module>
         <module>mybatis-only</module>
+        <module>mybatis-only/second-level-cache</module>
     </modules>
 
     <dependencyManagement>
@@ -41,6 +42,7 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>5.1.27</version>
+                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
