--- a/mybatis-only/pom.xml
+++ b/mybatis-only/pom.xml
@@ -35,6 +35,12 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.10</version>
+        </dependency>
     </dependencies>
 
 
