--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,13 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.bkunzhang.mybatis</groupId>
-        <artifactId>mybatis-parent</artifactId>
+        <groupId>com.bkunzh.db</groupId>
+        <artifactId>db-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common</artifactId>
+    <version>0.2-SNAPSHOT</version>
 
 
     <dependencies>
