--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.bkunzhang.mybatis</groupId>
-        <artifactId>mybatis-parent</artifactId>
+        <groupId>com.bkunzh.db</groupId>
+        <artifactId>db-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -14,9 +14,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.bkunzhang.mybatis</groupId>
+            <groupId>com.bkunzh.db</groupId>
             <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
